# ipa-data-tech-handbook

./: .gitignore  .markdownlint.yaml  .nojekyll  .pre-commit-config.yaml  404.qmd  DESCRIPTION  Justfile  LICENSE  README.md  _environment  _quarto.yml  contributing.html  contributing.qmd  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: pre-commit.yml  publish.yml
_freeze/docs/software/python/execute-results/: html.json
_freeze/docs/software/sql/execute-results/: html.json
_freeze/docs/software/stata/execute-results/: html.json
_freeze/software/python/execute-results/: html.json
_freeze/software/sql/execute-results/: html.json
_freeze/software/stata/execute-results/: html.json
_site_old/: .pre-commit-config.yaml  index.html  search.json
_site_old/.github/: pull_request_template.md
_site_old/docs/: contributing.html  index.html
_site_old/docs/about/: foundations.html  ipa_researchers.html  ipa_staff.html  mmds.html
_site_old/docs/guides/: code_review.html  computer_setup.html  pre_commit_hooks.html  venv.html
_site_old/docs/methods/: references.html
_site_old/docs/software/: coding_best_practices.html  git.html  github.html  justfile.html  ml.html  python.html  quarto.html  sql.html  stata.html  surveycto.html  vscode.html
_site_old/docs/software/surveycto/: scto_best_practices.html  scto_tools.html
_site_old/docs/teams/: dse.html  grds.html  mist.html  ppi.html
_site_old/site_libs/bootstrap/: bootstrap.min.css
about/: foundations.html  ipa_researchers.html  ipa_staff.html  mmds.html  mmds.qmd
assets/: js.html  style_ipa.css  styles.css  theme.scss  title-block.html  toc.html
docs/: contributing.html  contributing.md  contributing.qmd  index.html  index.md  index.qmd
docs/about/: foundations.qmd  ipa_researchers.md  ipa_staff.qmd
docs/assets/: style_ipa.css
docs/assets/images/: README.md
docs/guides/: code_review.html  code_review.md  computer_setup.html  computer_setup.md  computer_setup.qmd  mdtestguide.html  pre_commit_hooks.html  pre_commit_hooks.md  pre_commit_hooks.qmd  venv.html  venv.md
docs/methods/: references.html  references.md
docs/software/: git.html  git.md  github.html  github.md  justfile.html  justfile.md  python.html  python.qmd  quarto.html  quarto.qmd  sql.html  sql.qmd  stata.html  stata.qmd  vscode.html  vscode.md
docs/software/surveycto/: scto_best_practices.md  scto_tools.qmd
docs/teams/: dse.html  dse.md  grds.html  grds.md  mist.html  mist.md  ppi.html  ppi.md
guides/: code_review.html  code_review.qmd  computer_setup.html  computer_setup.qmd  pre_commit_hooks.html  pre_commit_hooks.qmd  venv.html  venv.qmd
handbook/: computer_setup.md  computer_setup.qmd  contributing.md  index.md  index.qmd
handbook/guides/: code-review.md
handbook/software/: git.md  python.py  quarto.md  stata.qmd  vscode.md
handbook/teams/: dse.md  mist.md
methods/: references.html
site_libs/bootstrap/: bootstrap-92f94413949d77dcb1cffc5c7f8daef8.min.css  bootstrap-c0fd143b4844bc3abd123ebef0a6d0e6.min.css  bootstrap.min.css
software/: coding_best_practices.html  coding_best_practices.qmd  git.html  github.html  justfile.html  ml.html  ml.qmd  python.html  python.qmd  quarto.html  sql.html  sql.qmd  stata.html  stata.qmd  surveycto.html  vscode.html
software/surveycto/: scto_best_practices.html  scto_tools.html
teams/: dse.html  grds.html  mist.html  ppi.html
