[project]
name = "ipa-data-tech-handbook"
version = "0.1.0"
description = "Handbook for IPA Data and Technology"

dependencies = [
    "jupyterlab>=4.2.1",
    "jupytext>=1.16.2",
    "jupysql>=0.10.10",
    "duckdb>=1.0.0",
    "duckdb-engine>=0.13.0",
    "stata-setup>=0.1.3",
    "seaborn>=0.13.2",
    "polars>=0.20.31",
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ipa-data-tech-handbook"]

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "sqlfluff>=3.0.7",
    "mdformat-pyproject>=0.0.1",
    "mdformat-gfm>=0.3.6",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-config>=0.1.3",
]

[tool.jupysql.SqlMagic]
feedback = 0
autopandas = false
autopolars = false
autolimit = 0
displaylimit = 10

[tool.ruff]
line-length = 88
fix = true

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# docs: https://docs.astral.sh/ruff/rules/
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "D",   # flake8-docstrings
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

ignore = [
    # do not enable if formatting
    # docs: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # tab indentation
    "E111",   # indentation
    "E114",   # indentation
    "E117",   # over indented
    "D206",   # indent with spaces
    "D300",   # triple single quotes
    "E501",   # line length regulated by formatter
    "D105",   # missing docstring in magic method
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "SIM110", # Use all instead of `for` loop
    "TRY003", # Avoid specifying long messages outside the exception class
    "D205",   # 1 blank line required between summary line and description
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.mdformat]
# docs: https://mdformat.readthedocs.io/en/stable/users/configuration_file.html
wrap = 88          # possible values: {"keep", "no", INTEGER}
number = false     # possible values: {false, true}
end_of_line = "lf" # possible values: {"lf", "crlf", "keep"}
