[project]
name = "ipa-research-resources"
version = "0.1.0"
description = "IPA Research Resources"

dependencies = [
    "jupyterlab>=4.2.4,<5",
    "jupytext>=1.16.4,<2",
    "jupysql>=0.10.12,<0.11",
    "duckdb>=1.0.0,<2",
    "duckdb-engine>=0.13.1,<0.14",
    "stata-setup>=0.1.3,<0.2",
    "seaborn>=0.13.2,<0.14",
    "ibis-framework>=9.3.0,<10",
    "polars>=1.4.1,<2",
    "pandas>=2.2.2,<3",
    "great-tables>=0.10.0,<0.15",
    "matplotlib>=3.9.1.post1,<4",
    "numpy>=2.0.1,<3",
    "causaldata>=0.1.4,<0.2",
    "pystata>=0.0.1,<0.0.2",
    "pre-commit>=3.8.0,<4",
    "ruff>=0.5.7,<0.8",
    "sqlfluff>=3.1.0,<4",
    "mdformat>=0.7.17,<0.8",
    "mdformat-pyproject>=0.0.1,<0.0.2",
    "mdformat-gfm>=0.3.6,<0.4",
    "mdformat-frontmatter>=2.0.8,<3",
    "mdformat-config>=0.1.3,<0.3",

]

readme = "README.md"
requires-python = ">= 3.9"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
r-base = ">=4.4.1,<5"
r-renv = ">=1.0.7,<2"

[tool.jupysql.SqlMagic]
feedback = 0
autopandas = false
autopolars = false
autolimit = 0
displaylimit = 10

[tool.ruff]
line-length = 88
fix = true
# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# docs: https://docs.astral.sh/ruff/rules/
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "D",   # flake8-docstrings
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

ignore = [
    # do not enable if formatting
    # docs: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # tab indentation
    "E111",   # indentation
    "E114",   # indentation
    "E117",   # over indented
    "D206",   # indent with spaces
    "D300",   # triple single quotes
    "E501",   # line length regulated by formatter
    "D105",   # missing docstring in magic method
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "SIM110", # Use all instead of `for` loop
    "TRY003", # Avoid specifying long messages outside the exception class
    "D205",   # 1 blank line required between summary line and description
    "D203",
    "D213",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.mdformat]
# docs: https://mdformat.readthedocs.io/en/stable/users/configuration_file.html
wrap = 88          # possible values: {"keep", "no", INTEGER}
number = false     # possible values: {false, true}
end_of_line = "lf" # possible values: {"lf", "crlf", "keep"}
